tests/paczka1/fuzzy1/37864474.err
Error in line 7: TtjJgaexfz S748 42,2
Error in line 15: PMpD A513 13,1
Error in line 16: PMpD S748 80,3
Error in line 17: hTo00ZIBatw A828 88,4
Error in line 23: PMpD S627 87,3
Error in line 14: TtjJgaexfz A513 8,2
Error in line 22: kzFkY A828 95,5
Error in line 25: PMpD A513 53,6
Error in line 30: PMpD A828 70,3
Error in line 36: PMpD S627 70,0
